--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body background="DHL-logo.png">
     <div id="root"></div>
     <!--
       This HTML file is a template.
